--- a/juejue-vite-h5/src/container/Home/style.module.less
+++ b/juejue-vite-h5/src/container/Home/style.module.less
@@ -76,7 +76,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 1px solid #e9e9e9;
+        border: 1PX solid #e9e9e9;
         color: #007fff;
     }
 }
